--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <title>Flashcards</title>
 </head>
 <body>
-    
+    <main>
+    <section id="container">
+        <article class="cartao">
+            <div class="> <cartao_conteudo"/div>
+            <h3>Programação</h3>
+            <div class="cartao_conteudo_pergunta">
+                O que é Javascript?
+                </div>
+        </article>
+</section>
+    </main>
+
+    <footer>
+<p>Projeto desenvolvido pela Alura, sem fins lucrativos</p>
+    </footer>
 </body>
 </html>
